<resources>
    <string name="app_name">Popular Movies</string>
    <string name="rating">Rating</string>
    <string name="popularity">Popularity</string>
    <string name="favorites">Favorites</string>
    <string name="sort_by">Sort By</string>
    <string name="settings">Settings</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="videos">Videos:</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="dd_mm_yyyy">DD MM YYYY</string>
    <string name="rating_movie">5.5/10</string>
    <string name="synopsis">synopsis</string>
    <string name="reviews">Reviews:</string>
    <string name="movie_title">Movie Title</string>
    <string name="author">author</string>
    <string name="review">review</string>
</resources>
